Fixed layout bug for Android

--- a/app/styles/layout/base.scss
+++ b/app/styles/layout/base.scss
@@ -114,6 +114,7 @@ nav.site-menu {
 }
 
 main {
+  display: block;
   position: relative;
   top: 5em;
   padding: 1em;
